test/invalid/qstring_unfinished.d
//T error: qstring_unfinished.d:4:11:
//T error: Expected `}` to end string literal, not the end of the file.

string s = q{ { plop }
